Add jdk 22 support